--- a/c01_stack_heap/Cargo.toml
+++ b/c01_stack_heap/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "L01_stack_heap"
+name = "c01_stack_heap"
 version = "0.1.0"
 authors = ["25ma <25mateam@gmail.com>"]
 edition = "2018"
